Finished basic project requirements

--- a/starter/Udaplay_01_starter_project.ipynb
+++ b/starter/Udaplay_01_starter_project.ipynb
@@ -5,7 +5,7 @@
    "id": "6fdd0bcb",
    "metadata": {},
    "source": [
-    "# [STARTER] Udaplay Project"
+    "# [Daniel Steinberg's] Udaplay Project"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a8d56169",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,8 @@
     "import json\n",
     "import chromadb\n",
     "from chromadb.utils import embedding_functions\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "import openai"
    ]
   },
   {
@@ -86,13 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "87e465d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Load environment variables\n",
-    "# load_dotenv()"
+    "load_dotenv()\n",
+    "openai.api_base = os.getenv(\"OPENAI_BASE_URL\")  # Use your Vocareum endpoint"
    ]
   },
   {
@@ -105,14 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b25c36dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Instantiate your ChromaDB Client\n",
     "# Choose any path you want\n",
-    "# chroma_client = chromadb.PersistentClient(path=\"chromadb\")"
+    "chroma_client = chromadb.PersistentClient(path=\"chromadb\")"
    ]
   },
   {
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "31c56281",
    "metadata": {},
    "outputs": [],
@@ -133,7 +135,7 @@
     "# TODO: Pick one embedding function\n",
     "# If picking something different than openai, \n",
     "# make sure you use the same when loading it\n",
-    "# embedding_fn = embedding_functions.OpenAIEmbeddingFunction()"
+    "embedding_fn = embedding_functions.OpenAIEmbeddingFunction()"
    ]
   },
   {
@@ -143,12 +145,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Create a collection\n",
+    "# Complete: Create a collection\n",
     "# Choose any name you want\n",
-    "# collection = chroma_client.create_collection(\n",
-    "#    name=\"udaplay\",\n",
-    "#    embedding_function=embedding_fn\n",
-    "#)"
+    "collection = chroma_client.create_collection(\n",
+    "   name=\"udaplay-2\",\n",
+    "   embedding_function=embedding_fn\n",
+    ")"
    ]
   },
   {
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "eb83fbb1",
    "metadata": {},
    "outputs": [],
@@ -207,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
